testsuite/tests/checks/deep_library/test.out
realy-realy-realy-deep-pkg.ads:1:1: error: Deep_Library_Hierarchy - rule violation
1 | package Realy.Realy.Realy.Deep.Pkg is
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

